# AI-Chatbot-Assistant

./: .env.example  .gitignore  AI_Code_review.txt  README.md  config.py  main.py  pyproject.toml
.github/: copilot-instructions.md
src/conversation/: conversation_manager.py
src/models/: message.py
src/prompts/: system_prompt.py
src/providers/: groq_provider.py
src/services/: llm_service.py
src/utils/: logger.py
tests/: test_conversation.py  test_message.py
