[project]
name = "my-second-ai-project"
version = "0.1.0"
description = "A simple command-line chatbot powered by an LLM provider (Groq)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
